@@ -25,7 +25,7 @@
 												  TCCR2A = ((1 << WGM21) | (1 << CS22) | (1 << CS21) | (1 << CS20)); }MACROE
 	
 	#define TIMEOUT_SLEEP_TIMER_OFF()     MACROS{ TCCR1B = 0; }MACROE
-	#define TIMEOUT_SLEEP_TIMER_ON()      MACROS{ TCCR1B = (1 << CS10); }MACROE
+	#define TIMEOUT_SLEEP_TIMER_ON()      MACROS{ TCCR1B = ((1 << CS11) | (1 << CS10)); }MACROE
 	#define TIMEOUT_SLEEP_TIMEOUT_RESET() MACROS{ SleepTimeOutTicks = 0; TCNT1 = 0; }MACROE
 	
 	// PROTOTYPES:
