@@ -32,7 +32,7 @@
 	#define USART_BAUDRATE        115200
 	#define USART_BAUDVALUE       (((F_CPU / (USART_BAUDRATE * 16UL))) - 1)
 
-	#define USART_OFF()           MACROS{ OSCCAL_SETSYSCLOCKSPEED(OSCCAL_BASECLOCKSPEED_1MHZ); UCSRB = 0x00; }MACROE
+	#define USART_OFF()           MACROS{ UCSRB = 0x00; }MACROE
 	
 	// PROTOTYPES:
 	void USART_Init(void);
